@@ -15,6 +15,9 @@ New features:
  - [ZBX-3338] updated Ukrainian translation; thanks to zalex_ua (Richlv)
 
 Bug fixes:
+ - [ZBX-3500] added "change" link to "clock" element in screen configuration (KB)
+ - [ZBX-3500] fixed infinite loop when screen was added as an element of another screen (KB)
+ - [ZBX-3500] fixed database query algorithm when saving maintenance (KB)
  - [ZBX-3497] fixed Undefined index after changing Type of information in items (Vlad)
  - [ZBX-3477] fixed deletion of discovery rules without item prototypes (Vedmak)
  - [ZBX-3328] data exported from 1.8.x now can be successfully imported into 2.0 (KB)
